# django-messanger

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  makefile  pyproject.toml
chat/: __init__.py  admin.py  consumers.py  models.py  routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/static/: room_chatbox.js
chat/templates/: base.html  rooms_list.html
chat/templates/includes/: header.html
messenger/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
messenger/chat/: admin.py  apps.py  consumers.py  models.py  routing.py  urls.py  views.py
messenger/chat/migrations/: 0001_initial.py
messenger/chat/templates/: base.html  room_confirm_delete.html  room_detail.html  room_form.html  user_direct_list.html
messenger/chat/templates/includes/: footer.html  header.html  menu.html
messenger/messenger/: asgi.py  settings.py  urls.py  wsgi.py
