[tool.poetry]
name = "messanger"
version = "0.1.0"
description = ""
authors = ["Drvmnekta <nataliakamysheva@mail.ru>"]
readme = "README.md"
packages = [{include = "messenger"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
channels = "^4.0.0"
daphne = "^4.0.0"
channels-redis = "^4.0.0"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
